# ParametricNet

./: CMakeLists.txt  README.md
ParametricNet/: Net.h  ParametricNet.h
Root/: Net.cxx  ParametricNet.cxx
data/: pnn_even.json  pnn_odd.json
scripts/: dataloader.py  evaluation.py  fill_spec.py  optimize.py  parametricnet.py  pnet.py  train.py  train_random.py
scripts/plots/: binning.py  detuning.py  ml_evaluation_tools.py  rebin.py  roccer.py  smearing.py
